# v4l2-ctl-android

./: .gitignore  CMakeLists.txt  README.md
v4l2/common/: keymap.c  keymap.h
v4l2/v4l2-ctl/: Android.mk.bak  android-config.h  v4l2-ctl.cpp  v4l2-ctl.h
